testsuite/poke.pkl/cast-diag-5.pk
/* { dg-do compile } */

fun foo = string:
  {
   return [1,2,3] as string; /* { dg-error "" } */
  }
